--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>jdbcConnection</name>
 
+
 	<build>
 		<finalName>jdbcConnection</finalName>
 		<plugins>
@@ -88,6 +89,11 @@
 			<artifactId>jersey-media-multipart</artifactId>
 			<version>2.27</version>
 		</dependency>
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4</version>
+        </dependency>
 	</dependencies>
 	<properties>
 		<jersey.version>2.27</jersey.version>
